<resources>
    <string name="app_name">SmartLearn</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Welcome,</string>
    <string name="text_title">SmartLearn App</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="profile">My Profile</string>
    <string name="path">http:/10.5.50.118:8080</string>
    <string name="search_hint">Search for a lecture</string>
    <string name="logout">Log out</string>
    <string name="submit">Submit</string>
    <string name="nickname">Student</string>
    <string name="studies">Wähle deinen Studiengang</string>
    <string name="subject">Wähle deine Fächer</string>
    <string name="plan">Gib deine Verfürgbarkeit ein</string>
    <string name="ratings">Bewertung</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="actions">More Actions</string>
    <string name="appointment">Termine</string>
    <string name="chat">chat</string>
    <string name="newItem">newItem</string>
    <string name="lecture">Lectures</string>
    <string name="tutor">Become a tutor</string>
    <string name="title_activity_user_lecture">Your Lectures</string>
    <string name="appointment_flag">selectedAppointment</string>
    <string name="appointment_fragment">appointmentFragment</string>
</resources>
