<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"
            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:elevation="4dp"
            android:paddingBottom="24dp"
            android:background="@color/colorBackground"
            >


            <ImageButton
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"

                android:src="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="Lydia Kondylidou"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="(lydia.kondylidis@gmail.com)"
                android:textColor="#fff"
                android:textSize="18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/nicknametext"
                    android:text="@string/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:textSize="16sp"
                     />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/nicknameedit"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="200dp"
                    android:textColor="#fff"
                    android:textSize="16sp"
                     />

        </RelativeLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:layout_marginLeft="5dp"
            android:background="@color/colorBackground"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"

            >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/studies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                android:text="Studiengang: "
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/studiestext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                android:text="@string/studies"
                app:layout_constraintLeft_toRightOf="@id/studies"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/studiesedit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                app:layout_constraintLeft_toRightOf="@+id/studies"
                app:layout_constraintTop_toTopOf="parent"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                android:clickable="true"
                android:text="Fach/Fächer: "
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/studies" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/subjecttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                android:text="@string/subject"
                app:layout_constraintLeft_toRightOf="@+id/subject"
                app:layout_constraintTop_toBottomOf="@+id/studies" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/subjectedit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:textColor="#fff"
                app:layout_constraintLeft_toRightOf="@+id/subject"
                app:layout_constraintTop_toBottomOf="@+id/studiesedit" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                android:clickable="true"
                android:text="Stundenplan: "
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/plantext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                android:text="@string/plan"
                app:layout_constraintLeft_toRightOf="@+id/plan"
                app:layout_constraintTop_toBottomOf="@+id/subject" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/planedit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                app:layout_constraintLeft_toRightOf="@+id/plan"
                app:layout_constraintTop_toBottomOf="@+id/subjectedit" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Bewertungen: "
                android:textStyle="bold"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/plan"
                app:layout_constraintLeft_toLeftOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ratingstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                android:textSize="15sp"
                android:text="@string/ratings"
                app:layout_constraintTop_toBottomOf="@+id/plan"
                app:layout_constraintLeft_toRightOf="@+id/ratings" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ratingsedit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@+id/planedit"
                app:layout_constraintLeft_toRightOf="@+id/ratings" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonSubmit"
                app:layout_constraintTop_toBottomOf="@+id/ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorTextHint"
                android:text="@string/submit" />

        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</ScrollView>